--- a/index.html
+++ b/index.html
@@ -48,36 +48,36 @@
             <section id="fonctionnement">
                 <div class="container">
                     <h2>Fonctionnement</h2>
-                    <section id="detail">
-                        <div>
+                    <div id="detail">
+                        <div class="container-detail">
                             <span>1</span>
-                            <article>
+                            <div class="explication">
                                 <i class="fa-solid fa-mobile-screen-button"></i>
                                 <p>Choisissez un restaurant</p>
-                            </article>
+                            </div>
                         </div>
-                        <div>
+                        <div class="container-detail">
                             <span>2</span>
-                            <article>
+                            <div class="explication">
                                 <i class="fa-solid fa-list-ul"></i>
                                 <p>Composez votre menu</p>
-                            </article>
+                            </div>
                         </div>
-                        <div>
+                        <div class="container-detail">
                             <span>3</span>
-                            <article>
+                            <div class="explication">
                                 <i class="fa-solid fa-store fa--active"></i>
                                 <p>Dégustez au restaurant</p>
-                            </article>
+                            </div>
                         </div>
-                    </section>
+                    </div>
                 </div>
             </section>
 
             <section id="cards">
                 <div class="container">
                     <h2>Restaurants</h2>
-                    <section id="card-container">
+                    <div id="card-container">
                         <div>
                             <a href="./restaurants/laPaletteDuGout.html">
                                 <article class="card">
@@ -177,7 +177,7 @@
                                 </label>
                             </form>
                         </div>
-                    </section>
+                    </div>
                 </div>
             </section>
 
